--- a/Front/vite-project/src/static/header.css
+++ b/Front/vite-project/src/static/header.css
@@ -211,7 +211,7 @@
 @media screen and (min-width: 1200px) {
 
   .menu-item-dkt {
-    font-size: 1.85rem;
+    font-size: 1.75rem;
     margin: 0 0.675em;
   }
 
@@ -220,7 +220,7 @@
 @media screen and (min-width: 1400px) {
 
   .menu-item-dkt {
-    font-size: 2.85rem;
+    font-size: .85rem;
     margin: 0 1em;
   }
 
