--- a/Front/vite-project/src/templates/animais_especies.html
+++ b/Front/vite-project/src/templates/animais_especies.html
@@ -17,7 +17,7 @@
     <header>
       <nav class="hdr">
         <div class="hdr-mobile">
-          <img class="hdr-mobile-item hdr-logo" src="src\assets\images\logoIJ.png" >
+          <img class="hdr-mobile-item hdr-logo" src="../assets/images/logoIJ.png" >
           <h1 class="title-principal">Instituto Jaguatirica</h1>
           <button id="hamburguer-button" class="hamburguer-button" aria-label="Menu Principal" aria-controls="menu">
             <span class="icon"></span>
@@ -32,7 +32,7 @@
           </ul>
         </div>
         <div class="hdr-desktop">
-          <img class="hdr-desktop-item hdr-logo" src="src\assets\images\logoIJ.png" >
+          <img class="hdr-desktop-item hdr-logo" src="../assets/images/logoIJ.png"" >
           <ul id="menu-dkt" class="menu-dkt" aria-hidden="true">
             <li class="menu-item-dkt"><a href="#">Home</a></li>
             <li class="menu-item-dkt"><a href="./src/templates/about.html">Sobre Nós</a></li>
@@ -44,9 +44,5 @@
         </div>
       </nav>
     </header> 
-    <script src="menu.js"></script>
-<<<<<<< HEAD
+    <script src="../menu.js"></script>
   </body>
-=======
-  </body>
->>>>>>> bfb2fe9acfb841965f90823e03898aa202d5549a
