--- a/Front/vite-project/src/templates/programas.html
+++ b/Front/vite-project/src/templates/programas.html
@@ -31,7 +31,7 @@
           </ul>
         </div>
         <div class="hdr-desktop">
-          <img class="hdr-desktop-item hdr-logo" src="src\assets\images\logoIJ.png" >
+          <img class="hdr-desktop-item hdr-logo" src="../assets/images/logoIJ.png"" >
           <ul id="menu-dkt" class="menu-dkt" aria-hidden="true">
             <li class="menu-item-dkt"><a href="#">Home</a></li>
             <li class="menu-item-dkt"><a href="./src/templates/about.html">Sobre Nós</a></li>
@@ -43,9 +43,7 @@
         </div>
       </nav>
     </header> 
-    <script src="menu.js"></script>
-<<<<<<< HEAD
+    <script src="../menu.js"></script>
+
   </body>
-=======
-  </body>
->>>>>>> bfb2fe9acfb841965f90823e03898aa202d5549a
+
