--- a/Front/vite-project/src/templates/animais_regioes.html
+++ b/Front/vite-project/src/templates/animais_regioes.html
@@ -53,38 +53,80 @@
     <section class="container-anml light">
     <h3 class="subtitle-anml">Amazônia</h3>
     <!--criar carrossel-->
-    <p>
-      <ul>
-        <li>'Yara', 'Peixe-boi', 'Fêmea', 'Mamífero','Trichechus inunguis',  '2023-01-09', 'Ameaçado'</li>
-        <li>'Fuleco', 'Tatu-canastra', 'Macho', 'Mamífero','Priodontes maximus', '2023-01-07', 'Ameaçado'</li>
-        <li>'Iporã', 'Jabuti-tinga', 'Macho', 'Réptil','Chelonoidis denticulatus','2023-01-05', 'Ameaçado'</li>
+    <p class = "region">
+      <ul class = "region anml-list">
+          <li class = "anml-card card-light">
+          <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+            <h2 class="anml-name">Yara</h2>
+            <h4 class="anml-spe">Peixe-boi</h4>
+            <h5 class="anml-spe"><em class="sci-name-item">Trichechus inunguis</em></h5>
+          <ul class="anml-data">
+            <li class="anml-data-item"><label class="label ext3">Vulnerável</label></li>
+            <li class="anml-data-item"><label class="label fem">Fêmea</label></li>
+            <li class="anml-data-item"><label class="label mam">Mamífero</label></li>
+          </ul>
+        </li>
+       <li class = "anml-card card-light">
+          <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+          <h2 class="anml-name">Fuleco</h2>
+          <h4 class="anml-spe">Tatu-canastra</h4>
+          <h5 class="anml-spe"><em class="sci-name-item">Priodontes maximus</em></h5>
+          <ul class="anml-data">
+            <li class="anml-data-item"><label class="label ext3">Vulnerável</label></li>
+            <li class="anml-data-item"><label class="label male">Macho</label></li>
+            <li class="anml-data-item"><label class="label mam">Mamífero</label></li>
+          </ul>     
+        </li>
+        <li class = "anml-card card-light">
+          <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+          <h2 class="anml-name">Iporã</h2>
+          <h4 class="anml-spe">Jabuti-tinga</h4>
+          <h5 class="anml-spe"><em class="sci-name-item">Chelonoidis denticulatus</em></h5>
+          <ul class="anml-data">
+            <li class="anml-data-item"><label class="label ext3">Vulnerável</label></li>
+            <li class="anml-data-item"><label class="label male">Macho</label></li>
+            <li class="anml-data-item"><label class="label rep">Réptil</label></li>
+          </ul>     
+        </li>
       </ul>
     </p>
+    
   </section>
   <section class="container-anml medium">
     <h3 class="subtitle-anml">Cerrado</h3>
     <!--criar carrossel-->
-    <p>
-      <ul>
-        <li>('Jade', 'Ararinha-azul', 'Fêmea', 'Ave', 'Cyanopsitta spixii', '2023-01-02', 'Extinto na Natureza'),</li>
-        <li>('Tande', 'Tamanduá-bandeira', 'Macho', 'Mamífero', 'Myrmecophaga tridactyla', 'Cerrado', '2023-01-04', 'Vulnerável'),</li>
-        <li>('Guarati', 'Lobo-guará','Macho', 'Mamífero', 'Chrysocyon brachyurus', 'Cerrado', '2023-01-06', 'Vulnerável'),</li>
+    <p class = "region">
+      <ul class = "region anml-list">
+        <li class = "anml-card card-medium">
+          <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+          <h2 class="anml-name">Jade</h2>
+          <h4 class="anml-spe">Ararinha-azul</h4>
+          <h5 class="anml-spe"><em class="sci-name-item">Cyanopsitta spixii</em></h5>
+          <ul class="anml-data">
+            <li class="anml-data-item"><label class="label ext6">Extinto</label></li>
+            <li class="anml-data-item"><label class="label fem">Fêmea</label></li>
+            <li class="anml-data-item"><label class="label ave">Ave</label></li>
+          </ul>    
+        </li>
+        <li class = "anml-card">('Tande', 'Tamanduá-bandeira', 'Macho', 'Mamífero', 'Myrmecophaga tridactyla', 'Cerrado', '2023-01-04', 'Vulnerável'),</li>
+        <li class = "anml-card">('Guarati', 'Lobo-guará','Macho', 'Mamífero', 'Chrysocyon brachyurus', 'Cerrado', '2023-01-06', 'Vulnerável'),</li>
       </ul>
     </p>
   </section>
   <section class="container-anml light">
     <!--criar carrossel-->
     <h3 class="subtitle-anml">Mata Atlântica</h3>
-    <p>
-      <ul>
-        <li>Juma, onça-pintada, fêmea, Mamífero, Panthera onca, 2023-01-01, Ameaçado</li>
-        <li>Taru, Mico-leão-dourado, Macho, Mamífero, Leontopithecus rosalia, 2023-01-03, Ameaçado,</li>
-        <li>Sombra, Gato-do-mato, Macho, Mamífero, Leopardus wiedii, 2023-01-08, Vulnerável</li>
-        <li>Pitanga, Jaguatirica, Fêmea, Mamífero, Leopardus pardalis, 2023-01-10, Ameaçado</li>
+    <p class = "region">
+      <ul class = "region anml-list">
+        <li class = "anml-card">Juma, onça-pintada, fêmea, Mamífero, Panthera onca, 2023-01-01, Ameaçado</li>
+        <li class = "anml-card">Taru, Mico-leão-dourado, Macho, Mamífero, Leontopithecus rosalia, 2023-01-03, Ameaçado,</li>
+        <li class = "anml-card">Sombra, Gato-do-mato, Macho, Mamífero, Leopardus wiedii, 2023-01-08, Vulnerável</li>
+        <li class = "anml-card">Pitanga, Jaguatirica, Fêmea, Mamífero, Leopardus pardalis, 2023-01-10, Ameaçado</li>
       </ul>
     </p>
   </section>
     <script src="../menu.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   </body>
 
 
