Animais por região (precisa fazer o carrossel)

--- a/Front/vite-project/src/index.css
+++ b/Front/vite-project/src/index.css
@@ -17,8 +17,11 @@
   --cor-animal-clara-2: #faebe1;
   --cor-label-fem: #fb74bc;
   --cor-label-male: #14b4db;
-  --cor-label-ext3: #fd6b1c;
-  --cor-label-ext6:#8f0000;
+  --cor-label-ext1: #ccdb03e9;
+  --cor-label-ext2: #ffd000;
+  --cor-label-ext3: #ffae00;
+  --cor-label-ext4: #ff6f00;
+  --cor-label-ext6:#000000;
   --cor-label-ave: #37d2b8;
   --cor-label-mam: #b175c7;
   --cor-label-rep: #6d8e2f;
