--- a/Front/vite-project/src/templates/animais_regioes.html
+++ b/Front/vite-project/src/templates/animais_regioes.html
@@ -10,8 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <!--Swiper-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="../../index.js"></script>
     <title>IJ</title>
@@ -66,6 +65,7 @@
             <li class="anml-data-item"><label class="label mam">Mamífero</label></li>
           </ul>
         </li>
+     
        <li class = "anml-card card-light">
           <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
           <h2 class="anml-name">Fuleco</h2>
@@ -90,6 +90,7 @@
         </li>
       </ul>
     </p>
+  </div>
     
   </section>
   <section class="container-anml medium">
@@ -103,13 +104,33 @@
           <h4 class="anml-spe">Ararinha-azul</h4>
           <h5 class="anml-spe"><em class="sci-name-item">Cyanopsitta spixii</em></h5>
           <ul class="anml-data">
-            <li class="anml-data-item"><label class="label ext6">Extinto</label></li>
+            <li class="anml-data-item"><label class="label ext6">Extinto na Natureza</label></li>
             <li class="anml-data-item"><label class="label fem">Fêmea</label></li>
             <li class="anml-data-item"><label class="label ave">Ave</label></li>
           </ul>    
         </li>
-        <li class = "anml-card">('Tande', 'Tamanduá-bandeira', 'Macho', 'Mamífero', 'Myrmecophaga tridactyla', 'Cerrado', '2023-01-04', 'Vulnerável'),</li>
-        <li class = "anml-card">('Guarati', 'Lobo-guará','Macho', 'Mamífero', 'Chrysocyon brachyurus', 'Cerrado', '2023-01-06', 'Vulnerável'),</li>
+        <li class = "anml-card card-medium">
+          <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+          <h2 class="anml-name">Tande</h2>
+          <h4 class="anml-spe">Tamanduá-bandeira</h4>
+          <h5 class="anml-spe"><em class="sci-name-item">Myrmecophaga tridactyla</em></h5>
+          <ul class="anml-data">
+            <li class="anml-data-item"><label class="label ext3">Vulnerável</label></li>
+            <li class="anml-data-item"><label class="label male">Macho</label></li>
+            <li class="anml-data-item"><label class="label mam">Mamífero</label></li>
+          </ul>      
+        </li>
+        <li class = "anml-card card-medium">
+          <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+          <h2 class="anml-name">Guaraná</h2>
+          <h4 class="anml-spe">Lobo-guará</h4>
+          <h5 class="anml-spe"><em class="sci-name-item">Chrysocyon brachyurus</em></h5>
+          <ul class="anml-data">
+            <li class="anml-data-item"><label class="label ext2">Quase Ameaçado</label></li>
+            <li class="anml-data-item"><label class="label male">Macho</label></li>
+            <li class="anml-data-item"><label class="label mam">Mamífero</label></li>
+          </ul>     
+        </li>
       </ul>
     </p>
   </section>
@@ -118,15 +139,54 @@
     <h3 class="subtitle-anml">Mata Atlântica</h3>
     <p class = "region">
       <ul class = "region anml-list">
-        <li class = "anml-card">Juma, onça-pintada, fêmea, Mamífero, Panthera onca, 2023-01-01, Ameaçado</li>
-        <li class = "anml-card">Taru, Mico-leão-dourado, Macho, Mamífero, Leontopithecus rosalia, 2023-01-03, Ameaçado,</li>
-        <li class = "anml-card">Sombra, Gato-do-mato, Macho, Mamífero, Leopardus wiedii, 2023-01-08, Vulnerável</li>
-        <li class = "anml-card">Pitanga, Jaguatirica, Fêmea, Mamífero, Leopardus pardalis, 2023-01-10, Ameaçado</li>
+        <li class = "anml-card card-light">
+          <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+            <h2 class="anml-name">Juma</h2>
+            <h4 class="anml-spe">Onça-pintada</h4>
+            <h5 class="anml-spe"><em class="sci-name-item">Panthera onca</em></h5>
+          <ul class="anml-data">
+            <li class="anml-data-item"><label class="label ext3">Quase Ameaçado</label></li>
+            <li class="anml-data-item"><label class="label fem">Fêmea</label></li>
+            <li class="anml-data-item"><label class="label mam">Mamífero</label></li>
+          </ul>
+        </li>
+        <li class = "anml-card card-light">
+          <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+          <h2 class="anml-name">Solar</h2>
+          <h4 class="anml-spe">Mico-leão-dourado</h4>
+          <h5 class="anml-spe"><em class="sci-name-item">Leontopithecus rosalia</em></h5>
+          <ul class="anml-data">
+            <li class="anml-data-item"><label class="label ext4">Ameaçado</label></li>
+            <li class="anml-data-item"><label class="label male">Macho</label></li>
+            <li class="anml-data-item"><label class="label mam">Mamífero</label></li>
+          </ul>
+        </li>
+        <li class = "anml-card card-light">
+          <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+          <h2 class="anml-name">Sombra</h2>
+          <h4 class="anml-spe">Gato-do-mato</h4>
+          <h5 class="anml-spe"><em class="sci-name-item">Leopardus wiedii</em></h5>
+          <ul class="anml-data">
+            <li class="anml-data-item"><label class ="label ext3">Quase Ameaçado</label></li>
+            <li class="anml-data-item"><label class="label male">Macho</label></li>
+            <li class="anml-data-item"><label class="label mam">Mamífero</label></li>
+          </ul>
+        </li>
+        <li class = "anml-card card-light"> 
+          <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+          <h2 class="anml-name">Pitanga</h2>
+          <h4 class="anml-spe">Jaguatirica</h4>
+          <h5 class="anml-spe"><em class="sci-name-item">Leopardus pardalis</em></h5>
+          <ul class="anml-data">
+            <li class="anml-data-item"><label class ="label ext1">Pouco Ameaçado</label></li>
+            <li class="anml-data-item"><label class="label fem">Fêmea</label></li>
+            <li class="anml-data-item"><label class="label mam">Mamífero</label></li>
+          </ul>           
+        </li>
       </ul>
     </p>
   </section>
     <script src="../menu.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   </body>
 
 
