--- a/Front/vite-project/src/templates/animais_especies.html
+++ b/Front/vite-project/src/templates/animais_especies.html
@@ -12,7 +12,7 @@
     <script src="../../index.js"></script>
     <title>IJ</title>
   </head>
-  <body>
+  <body class="bd-anml">
 
     <header>
       <nav class="hdr">
@@ -23,26 +23,163 @@
             <span class="icon"></span>
           </button>
           <ul id="menu" class="menu">
-            <li class="menu-item"><a href="#">Home</a></li>
-            <li class="menu-item"><a href="#">Sobre Nós</a></li>
-            <li class="menu-item"><a href="#">Programas</a></li>
+            <li class="menu-item"><a href="./index.html">Home</a></li>
+            <li class="menu-item"><a href="./src/templates/about.html">Sobre Nós</a></li>
+            <li class="menu-item"><a href="./src/templates/program.html">Programas</a></li>
             <li class="menu-item"><a href="#">Animais</a></li>
-            <li class="menu-item"><a href="#">Voluntariado</a></li>
-            <li class="menu-item"><a href="#">Doações</a></li>
+            <li class="menu-item"><a href="./src/templates/cadastro_voluntario.html">Voluntariado</a></li>
+            <li class="menu-item"><a href="./doacao.html">Doações</a></li>
           </ul>
         </div>
         <div class="hdr-desktop">
-          <img class="hdr-desktop-item hdr-logo" src="../assets/images/logoIJ.png"" >
+          <img class="hdr-desktop-item hdr-logo" src="../assets/images/logoIJ.png" >
           <ul id="menu-dkt" class="menu-dkt" aria-hidden="true">
-            <li class="menu-item-dkt"><a href="#">Home</a></li>
+            <li class="menu-item-dkt"><a href="./index.html">Home</a></li>
             <li class="menu-item-dkt"><a href="./src/templates/about.html">Sobre Nós</a></li>
             <li class="menu-item-dkt"><a href="./src/templates/program.html">Programas</a></li>
             <li class="menu-item-dkt"><a href="#">Animais</a></li>
             <li class="menu-item-dkt"><a href="./src/templates/cadastro_voluntario.html">Voluntariado</a></li>
-            <li class="menu-item-dkt"><a href="#">Doações</a></li>
+            <li class="menu-item-dkt"><a href="./doacao.html">Doações</a></li>
           </ul>
         </div>
       </nav>
     </header> 
+
+    <h2 class="title-principal title-anml">Nossos animais e seus habitats!</h2>
+    <section class="container-anml light">
+    <h3 class="subtitle-anml">Réptil</h3>
+    <!--criar carrossel-->
+    <p class = "region">
+      <ul class = "region anml-list">
+        <li class = "anml-card card-light">
+          <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+          <h2 class="anml-name">Iporã</h2>
+          <h4 class="anml-spe">Jabuti-tinga</h4>
+          <h5 class="anml-spe"><em class="sci-name-item">Chelonoidis denticulatus</em></h5>
+          <h4 class="anml-spe">Amazônia</h4>
+          <ul class="anml-data">
+            <li class="anml-data-item"><label class="label ext3">Vulnerável</label></li>
+            <li class="anml-data-item"><label class="label male">Macho</label></li>
+          </ul>     
+        </li>
+      </ul>
+    </p>
+  </div>
+    
+  </section>
+  <section class="container-anml medium">
+    <h3 class="subtitle-anml">Ave</h3>
+    <!--criar carrossel-->
+    <p class = "region">
+      <ul class = "region anml-list">
+        <li class = "anml-card card-medium">
+          <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+          <h2 class="anml-name">Jade</h2>
+          <h4 class="anml-spe">Ararinha-azul</h4>
+          <h5 class="anml-spe"><em class="sci-name-item">Cyanopsitta spixii</em></h5>
+          <h4 class="anml-spe">Cerrado</h4>
+          <ul class="anml-data">
+            <li class="anml-data-item"><label class="label ext6">Extinto na Natureza</label></li>
+            <li class="anml-data-item"><label class="label fem">Fêmea</label></li>
+          </ul>    
+        </li>
+      </ul>
+    </p>
+  </section>
+  <section class="container-anml light">
+    <!--criar carrossel-->
+    <h3 class="subtitle-anml">Mamífero</h3>
+    <p class = "region">
+      <ul class = "region anml-list">
+        <li class = "anml-card card-light">
+          <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+            <h2 class="anml-name">Juma</h2>
+            <h4 class="anml-spe">Onça-pintada</h4>
+            <h5 class="anml-spe"><em class="sci-name-item">Panthera onca</em></h5>
+            <h4 class="anml-spe">Mata Atlântica</h4>
+          <ul class="anml-data">
+            <li class="anml-data-item"><label class="label ext3">Quase Ameaçado</label></li>
+            <li class="anml-data-item"><label class="label fem">Fêmea</label></li>
+          </ul>
+        </li>
+        <li class = "anml-card card-light">
+          <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+          <h2 class="anml-name">Solar</h2>
+          <h4 class="anml-spe">Mico-leão-dourado</h4>
+          <h5 class="anml-spe"><em class="sci-name-item">Leontopithecus rosalia</em></h5>
+          <h4 class="anml-spe">Mata Atlântica</h4>
+          <ul class="anml-data">
+            <li class="anml-data-item"><label class="label ext4">Ameaçado</label></li>
+            <li class="anml-data-item"><label class="label male">Macho</label></li>
+          </ul>
+        </li>
+        <li class = "anml-card card-light">
+          <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+          <h2 class="anml-name">Sombra</h2>
+          <h4 class="anml-spe">Gato-do-mato</h4>
+          <h5 class="anml-spe"><em class="sci-name-item">Leopardus wiedii</em></h5>
+          <h4 class="anml-spe">Mata Atlântica</h4>
+          <ul class="anml-data">
+            <li class="anml-data-item"><label class ="label ext3">Quase Ameaçado</label></li>
+            <li class="anml-data-item"><label class="label male">Macho</label></li>
+          </ul>
+        </li>
+        <li class = "anml-card card-light"> 
+          <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+          <h2 class="anml-name">Pitanga</h2>
+          <h4 class="anml-spe">Jaguatirica</h4>
+          <h5 class="anml-spe"><em class="sci-name-item">Leopardus pardalis</em></h5>
+          <h4 class="anml-spe">Mata Atlântica</h4>
+          <ul class="anml-data">
+            <li class="anml-data-item"><label class ="label ext1">Pouco Ameaçado</label></li>
+            <li class="anml-data-item"><label class="label fem">Fêmea</label></li>
+          </ul>           
+        </li>
+        <li class = "anml-card card-light">
+          <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+          <h2 class="anml-name">Tande</h2>
+          <h4 class="anml-spe">Tamanduá-bandeira</h4>
+          <h5 class="anml-spe"><em class="sci-name-item">Myrmecophaga tridactyla</em></h5>
+          <h4 class="anml-spe">Cerrado</h4>
+          <ul class="anml-data">
+            <li class="anml-data-item"><label class="label ext3">Vulnerável</label></li>
+            <li class="anml-data-item"><label class="label male">Macho</label></li>
+          </ul>      
+        </li>
+        <li class = "anml-card card-light">
+          <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+          <h2 class="anml-name">Guaraná</h2>
+          <h4 class="anml-spe">Lobo-guará</h4>
+          <h5 class="anml-spe"><em class="sci-name-item">Chrysocyon brachyurus</em></h5>
+          <h4 class="anml-spe">Cerrado</h4>
+          <ul class="anml-data">
+            <li class="anml-data-item"><label class="label ext2">Quase Ameaçado</label></li>
+            <li class="anml-data-item"><label class="label male">Macho</label></li>
+        <li class = "anml-card card-light">
+          <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+          <h2 class="anml-name">Yara</h2>
+          <h4 class="anml-spe">Peixe-boi</h4>
+          <h5 class="anml-spe"><em class="sci-name-item">Trichechus inunguis</em></h5>
+          <h4 class="anml-spe">Amazônia</h4>
+          <ul class="anml-data">
+            <li class="anml-data-item"><label class="label ext3">Vulnerável</label></li>
+            <li class="anml-data-item"><label class="label fem">Fêmea</label></li>
+          </ul>
+        </li>
+        <li class = "anml-card card-light">
+          <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+          <h2 class="anml-name">Fuleco</h2>
+          <h4 class="anml-spe">Tatu-canastra</h4>
+          <h5 class="anml-spe"><em class="sci-name-item">Priodontes maximus</em></h5>
+          <h4 class="anml-spe">Amazônia</h4>
+          <ul class="anml-data">
+            <li class="anml-data-item"><label class="label ext3">Vulnerável</label></li>
+            <li class="anml-data-item"><label class="label male">Macho</label></li>
+          </ul>     
+        </li>
+      </ul>
+    </p>
+  </section>
     <script src="../menu.js"></script>
   </body>
+</html>
