--- a/Front/vite-project/src/static/about.css
+++ b/Front/vite-project/src/static/about.css
@@ -2,14 +2,14 @@
     display: flex;
     justify-content: center;
     padding: 20px;
-    background-color: var(--cor-clara-2); 
+    background-color: var(--cor-clara-1); 
   }
   
   .about {
     text-align: center;
-    max-width: 500px;
+    max-width: 100vw;
     font-family: var(--fonte-principal);
-    color: var(--cor-escura-1); 
+    color: var(--cor-escura-2); 
   }
   
   .about-image-container {
@@ -26,15 +26,15 @@
   }
   
   .titulo-about {
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 600;
-    margin-bottom: 10px;
+    margin-bottom: 0.5em;
     color: var(--cor-escura-1);
   }
   
   .about-text {
-    font-size: 16px;
-    font-weight: 300;
+    font-size: 1rem;
+    font-weight: 400;
     line-height: 1.6;
     margin-bottom: 20px;
     color: #4E2B1F; 
@@ -52,6 +52,7 @@
     border-radius: 5px;
     cursor: pointer;
     text-transform: uppercase;
+    margin-bottom: 1em;
   }
   
   .about-button:hover {
