--- a/Front/vite-project/src/templates/about.html
+++ b/Front/vite-project/src/templates/about.html
@@ -9,8 +9,11 @@
   <link rel="stylesheet" href="../reset.css">
   <link rel="stylesheet" href="../static/about.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com" 
+  crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+</head>
 </head>
 <body>
 
@@ -47,16 +50,12 @@
 
   <div class="container-about">
     <section class="about">
-      <h2 class="titulo-about">Sobre Nós</h2>
+
       <div class="about-image-container">
         <img class="about-image" src="../assets/images/Animais/mamifero/jaguatirica/Jaguatirica-about.webp" alt="Imagem de uma jaguatirica em uma árvore">
       </div>
+      <h2 class="titulo-about">Sobre Nós</h2>
 
-      <!--<p class="about-text">
-        O Instituto Jaguatirica é uma organização dedicada à proteção e conservação da fauna silvestre brasileira. Nosso foco é a reabilitação e reintegração dos animais em seus habitats naturais.
-        Fundado por especialistas amantes da natureza, o Instituto Jaguatirica trabalha incansavelmente no resgate e cuidado desses animais.
-        Acreditamos que, com a colaboração da comunidade, ciência e responsabilidade ambiental, podemos criar um futuro seguro para a vida selvagem no Brasil.
-      </p>-->
       <p class="about-text">O Instituto Jaguatirica é uma organização sem fins lucrativos fundada em 15 de junho de 2010, com a missão de promover a proteção e a conservação da fauna silvestre brasileira. Somos um grupo de biólogos, veterinários, ecologistas e voluntários apaixonados pela natureza e comprometidos com a recuperação de espécies nativas que enfrentam sérios riscos devido à ação humana, como o tráfico ilegal de animais, o desmatamento e as mudanças climáticas.
       </p>
       <h3 class="titulo-about">Nossa História</h3>
@@ -69,22 +68,53 @@
       </p>
       <p class="about-text">Além disso, desenvolvemos programas voltados para o monitoramento de espécies ameaçadas, o combate ao tráfico de animais silvestres e a educação ambiental. Atuamos em conjunto com a comunidade, escolas, universidades e outras ONGs para promover a conscientização sobre a importância da preservação da biodiversidade e os impactos negativos da ação humana sobre os ecossistemas. Trabalhamos para engajar a sociedade na proteção da fauna, garantindo um futuro mais seguro para as espécies brasileiras.
       </p>
-      <a href="./src/templates/programas.html" class="about-button">CONHEÇA NOSSOS PROJETOS!</a>
+      
       <h3 class="titulo-about">Nossos Valores</h3>
-      <p class="about-text">Compromisso com a Vida Selvagem: Cada animal resgatado é tratado com o máximo de cuidado, respeito e dedicação. Acreditamos que todas as espécies merecem ser preservadas e protegidas.Educação Ambiental: Trabalhamos ativamente para conscientizar o público sobre a importância da preservação e dos impactos do tráfico de animais e do desmatamento. Acreditamos que a mudança começa na educação e na informação.Inovação e Pesquisa: Buscamos sempre aplicar as melhores práticas científicas no tratamento e reabilitação dos animais. Nossos projetos de pesquisa visam entender melhor a biodiversidade brasileira e as necessidades específicas de conservação das espécies.Responsabilidade Social e Ambiental: Sabemos que a preservação da fauna e da flora depende da colaboração de todos. Nosso trabalho se estende a criar soluções sustentáveis e integrar as comunidades locais em nossos esforços de conservação.
-      </p> <!--Arrumar em uma lista de ícones-->
+      <ul class="about-list">
+        <li>
+          <i class="fas fa-paw"></i> 
+          <p class="about-text-list">Compromisso com a Vida Selvagem:</p> 
+          <p class="about-text">Cada animal resgatado é tratado com o máximo de cuidado, respeito e dedicação. Acreditamos que todas as espécies merecem ser preservadas e protegidas.</p> 
+        </li>
+        <li>
+          <i class="fas fa-seedling"></i> 
+          <p class="about-text-list">Educação Ambiental:</p> 
+          <p class="about-text">Trabalhamos ativamente para conscientizar o público sobre a importância da preservação e dos impactos do tráfico de animais e do desmatamento. Acreditamos que a mudança começa na educação e na informação.</p> 
+        </li>
+        <li>
+          <i class="fas fa-flask"></i> 
+          <p class="about-text-list">Inovação e Pesquisa:</p> 
+          <p class="about-text">Buscamos sempre aplicar as melhores práticas científicas no tratamento e reabilitação dos animais. Nossos projetos de pesquisa visam entender melhor a biodiversidade brasileira e as necessidades específicas de conservação das espécies.</p> 
+        </li>
+        <li>
+          <i class="fas fa-handshake"></i> 
+          <p class="about-text-list">Responsabilidade Social e Ambiental:</p> 
+          <p class="about-text">Sabemos que a preservação da fauna e da flora depende da colaboração de todos. Nosso trabalho se estende a criar soluções sustentáveis e integrar as comunidades locais em nossos esforços de conservação.</p> 
+        </li>
+      </ul>
       <h3 class="titulo-about">Como posso ajudar?</h3>
-      <p class="about-text">O Instituto Jaguatirica conta com o apoio de voluntários, doações e parcerias com empresas e organizações para manter suas atividades. Você pode fazer a diferença de várias formas:
-
-        Seja um voluntário: Se você tem paixão pela natureza e deseja contribuir para a causa, entre em contato conosco para saber mais sobre as oportunidades de voluntariado.
-        
-        Faça uma doação: Sua contribuição financeira é essencial para que possamos continuar nosso trabalho de resgatar, cuidar e proteger a vida selvagem.
-        
-        Divulgue nossa causa: Espalhe nossa mensagem! A conscientização é uma ferramenta poderosa para a mudança.
-      </p> <!--Arrumar em uma lista-->
+      <div class="card-container">
+        <div class="card">
+          <i class="fas fa-hands-helping"></i>
+          <p class="about-text-list-card">Seja um voluntário:</p>
+          <p class="about-text-card">Se você tem paixão pela natureza e deseja contribuir para a causa, entre em contato conosco para saber mais sobre as oportunidades de voluntariado.</p>
+        </div>
+        <div class="card">
+          <i class="fas fa-donate"></i>
+          <p class="about-text-list-card">Faça uma doação:</p>
+          <p class="about-text-card">Sua contribuição financeira é essencial para que possamos continuar nosso trabalho de resgatar, cuidar e proteger a vida selvagem.</p>
+        </div>
+        <div class="card">
+          <i class="fas fa-bullhorn"></i>
+          <p class="about-text-list-card">Divulgue nossa causa:</p>
+          <p class="about-text-card">Espalhe nossa mensagem! A conscientização é uma ferramenta poderosa para a mudança.</p>
+        </div>
+      </div>
+      </p> 
       <h3 class="titulo-about">Junte-se a nós!</h3>
       <p class="about-text">Nós acreditamos que, com o apoio de todos, podemos construir um futuro mais sustentável e saudável para a fauna brasileira. A nossa missão não seria possível sem o engajamento da sociedade e a colaboração entre ciência, educação e ação direta. Vamos, juntos, proteger o que há de mais precioso: a vida selvagem do Brasil!
       </p>
+      <a href="./src/templates/programas.html" class="about-button">CONHEÇA NOSSOS PROJETOS!</a>
     </section>
   </div>
 
